# karst-3.0-fracture-redissolution

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
algorithms/: Makefile  Makefile_bkp  algorithms.h  algorithms_cc.h  main.cc  matrix_solvers.c  triangularization.cc
algorithms/delaunay-triangulation-master/: Makefile  triangle.h  vector2.h
include/: constants.h  grain.h  network.h  node.h  pore.h  printing.h  tests.h  triangulation.h
notes/: plan
simulation_setups/1D/: config.txt  run_1D.sh
simulation_setups/2D/: config_small.txt  config_small_diss.txt  run_small.sh  run_small_diss.sh
simulation_setups/ML/: config_small.txt  run_small.sh
simulation_setups/fracture/: config_1D.txt  config_small.txt  run_1D.sh  run_small.sh  run_small2.sh
simulation_setups/k2_dyn/: config1D.txt  config_small.txt  run_1D.sh  run_small.sh
simulation_setups/redissolution/: run_small.sh
simulation_setups/redissolution/1D/: config.txt  config_pH_threshold.txt  config_small.txt  run_1D.sh
simulation_setups/redissolution/2D/: config_pH_threshold.txt  config_small.txt  run_small.sh  run_small_bkp.sh
simulation_setups/well/: config_small.txt  run_small.sh
simulation_setups/well_with_crack/: config_small.txt  run_small.sh
src/: Makefile  analysis.cc  control_and_verification.cc  dissolution.cc  evolution.cc  grain.cc  import_export.cc  initial_modifications.cc  main.cc  merging.cc  network.cc  network_generation.cc  network_maintenance.cc  node.cc  pattern_analysis.cc  pore.cc  printing.cc  printing_net.cc  save_in_VTK.cc  setup.cc  tests.cc
tests/: karst
tests/basic/: config.txt  test_1.sh
tests/basic/test_1/: config.txt
tests/example/: config.txt
